# Sources

Singular/: Makefile.am  cntrlc.cc  extra.cc  grammar.cc  grammar.h  grammar.y  iparith.cc  ipassign.cc  ipid.cc  ipid.h  ipshell.cc  ipshell.h  singular-libs  subexpr.cc
Singular/LIB/: JMBTest.lib  absfact.lib  ainvar.lib  algebra.lib  algemodstd.lib  arcpoint.lib  assprimeszerodim.lib  atkins.lib  bfun.lib  brnoeth.lib  central.lib  control.lib  crypto.lib  curvepar.lib  decodegb.lib  deform.lib  dmod.lib  dmodapp.lib  ehv.lib  elim.lib  findifs.lib  finitediff.lib  finvar.lib  freegb.lib  general.lib  gitfan.lib  gmspoly.lib  gmssing.lib  hnoether.lib  homolog.lib  ideal.lib  inout.lib  involut.lib  jacobson.lib  latex.lib  linalg.lib  matrix.lib  monomialideal.lib  multigrading.lib  ncalg.lib  (+23 more)
Tst/: New.lst  Short.lst  regress.cmd
Tst/Long/: ok_l.lst
Tst/Manual/: AG_codes.tst  ASCII_links.tst  BINresol.tst  CurveParam.tst  ECoef.tst  PocklingtonLehmer.tst  PollardRho.tst  truncateFast.tst
Tst/Short/: bug_529.res.gz.uu  bug_529.stat  bug_reduceZ.res.gz.uu  bug_reduceZ.stat  bug_reduceZ.tst  bug_tr704.res.gz.uu  bug_tr704.stat  bug_tr704.tst  gcd_integer_0_s.res.gz.uu  gcd_integer_0_s.stat  gcd_integer_0_s.tst  ok_s.lst  primdecint_some_special_cases.tst  test_unit_ideal_decomposition.new.tst  test_unit_ideal_decomposition.res.gz.uu  test_unit_ideal_decomposition.stat  test_unit_ideal_decomposition.tst
Tst/Wester/: G_p.tst
doc/: general.doc  reference.doc
doxygen-settings/: navtree.css  tabs.css
factory/: Makefile.am  configure.ac  doxygen-settings
factory/doxygen-settings/: doxygen.cfg  styleSheetFile.css
factory/libfac/: header.tpl  libfac.h
factory/libfac/factor/: version.c
kernel/: ideals.cc  kstd2.cc  kutil.cc
kernel/GBEngine/: kstd1.cc  kstd2.cc  kutil.cc
libpolys/: Makefile.am
libpolys/coeffs/: rmodulo2m.cc
libpolys/polys/: simpleideals.cc
libpolys/polys/monomials/: ring.cc  ring.h
libpolys/reporter/: reporter.cc
resources/: feFopen.cc
